--- a/public/css/comisaria/index.css
+++ b/public/css/comisaria/index.css
@@ -83,13 +83,11 @@ main {
 }
 
 .box-inf {
-    width: 200px;
-    height: 120px;
+    width: 300px;
+    height: 140px;
     border-radius: 7px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
 .box-inf span {
@@ -361,6 +359,30 @@ main {
 .cont-for-btn a {
     color: rgb(101, 101, 255);
     font-size: 14px;
+}
+
+.m-denuncia-top {
+    width: 100%;
+    padding: 0 25px;
+    display: flex;
+    gap: 10px;
+}
+
+.m-denuncia-top button {
+    color: #fff;
+    padding: 7px 16px;
+    font-size: 14px;
+    border-radius: 7px;
+    background-color: #7f7f7f;
+    border: none;
+}
+
+.m-denuncia-top button:hover {
+    background-color: #4a4a4a;
+}   
+
+.btn_active_navi {
+    background-color: #4a4a4a !important;
 }
 
 @media (max-width: 1120px) {
