--- a/public/css/comisaria/index.css
+++ b/public/css/comisaria/index.css
@@ -250,6 +250,22 @@ main {
     cursor: pointer;
 }
 
+.alert-success {
+    position: fixed;
+    width: 300px;
+    top: 0;
+    margin: 0 auto;
+    left: 0;
+    text-align: center;
+    right: 0;
+}
+
+.alert-success a {
+    text-decoration: none;
+    color: #000;
+    text-align: center;
+}
+
 .alert-danger a {
     text-decoration: none;
     color: #fff;
